# oop2024-lab1

./: CMakeLists.txt  Doxyfile_diff  LICENSE  README.md  dialog.cpp  dialog.h  internal.cpp  internal.h  main.cpp  tests.cpp
tests/: CMakeLists.txt
